[gd_scene load_steps=3 format=2]

[ext_resource path="res://Spellbook.gd" type="Script" id=1]
[ext_resource path="res://title_font.font" type="BitmapFont" id=2]

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftVBox" type="VBoxContainer" parent="."]
margin_right = 200.0
margin_bottom = 600.0
mouse_filter = 0

[node name="Label" type="Label" parent="LeftVBox"]
margin_right = 200.0
margin_bottom = 21.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Spellbook"

[node name="ScrollContainer" type="ScrollContainer" parent="LeftVBox"]
margin_top = 25.0
margin_right = 200.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpellList" type="ItemList" parent="LeftVBox/ScrollContainer"]
margin_right = 200.0
margin_bottom = 575.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightVBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 270.0
margin_top = 20.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SkillName" type="Label" parent="RightVBox"]
margin_right = 754.0
margin_bottom = 21.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )

[node name="Description" type="Label" parent="RightVBox"]
margin_top = 25.0
margin_right = 754.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 1
size_flags_vertical = 0
autowrap = true

[node name="Type" type="RichTextLabel" parent="RightVBox"]
margin_top = 129.0
margin_right = 754.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 20 )
bbcode_enabled = true

[node name="BaseDamage" type="Label" parent="RightVBox"]
margin_top = 153.0
margin_right = 754.0
margin_bottom = 167.0
mouse_filter = 1
size_flags_vertical = 0

[node name="Label" type="Label" parent="."]
margin_right = 247.0
margin_bottom = 14.0
mouse_filter = 1
size_flags_vertical = 0
[connection signal="item_selected" from="LeftVBox/ScrollContainer/SpellList" to="." method="_on_SpellList_item_selected"]
